--- a/services.html
+++ b/services.html
@@ -9,108 +9,140 @@
   <link rel="canonical" href="https://www.yourwebsite.com/services.html" />
   <link rel="stylesheet" href="assets/styles.css" />
   <link rel="icon" href="assets/logo.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="site-header">
     <a class="brand" href="index.html" aria-label="GraphiTech Command home">
-      <img src="assets/logo.png" alt="GraphiTech Command logo" />
+      <img src="assets/logo.png" alt="GraphiTech Command logo" width="34" height="34" />
       <span>GraphiTech Command</span>
     </a>
-    <nav id="nav" class="nav">
+    <nav id="main-nav" class="nav">
       <a href="index.html" aria-label="Home page">Home</a>
       <a href="about.html" aria-label="About us page">About</a>
-      <a href="services.html" class="active" aria-label="Our services page">Services</a>
+      <a href="services.html" class="active" aria-label="Our services page" aria-current="page">Services</a>
+      <a href="portfolio.html" aria-label="Portfolio page">Portfolio</a>
       <a href="contact.html" class="btn btn--primary" aria-label="Contact us page">Contact</a>
       <button id="themeToggle" class="icon-btn" aria-label="Toggle theme" title="Toggle theme">🌓</button>
     </nav>
     <button id="menuToggle" class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">☰</button>
   </header>
 
-  <main class="container section">
-    <h1>Our Services</h1>
-    
-    <h2>Web Development & Automation</h2>
-    <div class="grid cols-3">
-      <div class="card price">
-        <h3>Website Starter</h3>
-        <p class="price__value">₦150,000</p>
-        <ul>
-          <li>5-page responsive site</li>
-          <li>SEO setup</li>
-          <li>Contact form</li>
-        </ul>
-        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary" aria-label="Get Started with Website Starter">Get Started</a>
+  <main>
+    <section class="hero hero--small">
+      <div class="container">
+        <h1>Our Services</h1>
+        <p class="muted">
+          We offer a full suite of services, from creative design and branding to cutting-edge web and blockchain solutions.
+        </p>
       </div>
-      <div class="card price price--featured">
-        <h3>Web App Pro</h3>
-        <p class="price__value">₦350,000+</p>
-        <ul>
-          <li>Custom frontend + backend</li>
-          <li>Database & auth</li>
-          <li>Deployment</li>
-        </ul>
-        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary" aria-label="Request a quote for Web App Pro">Request Quote</a>
-      </div>
-      <div class="card price">
-        <h3>Automation Suite</h3>
-        <p class="price__value">₦120,000+</p>
-        <ul>
-          <li>Workflow automation</li>
-          <li>Data scraping/cleaning</li>
-          <li>Dashboards</li>
-        </ul>
-        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary" aria-label="Discuss Automation Suite services">Discuss</a>
-      </div>
-    </div>
+    </section>
 
-    <h2>Graphics, Printing & Branding</h2>
-    <div class="grid cols-3">
-      <div class="card price">
-        <h3>Graphics Design</h3>
-        <p class="price__value">Custom Quote</p>
-        <ul>
-          <li>Logos & flyers</li>
-          <li>Social media kits</li>
-          <li>Business cards</li>
-        </ul>
-        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary" aria-label="Hire us for Graphics Design">Hire Us</a>
-      </div>
-      <div class="card price">
-        <h3>Printing Services</h3>
-        <p class="price__value">Custom Quote</p>
-        <ul>
-          <li>Posters & banners</li>
-          <li>Branded merchandise</li>
-          <li>Bulk printing</li>
-        </ul>
-        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary" aria-label="Order Printing Services">Order Now</a>
-      </div>
-      <div class="card price">
-        <h3>Branding Solutions</h3>
-        <p class="price__value">Custom Quote</p>
-        <ul>
-          <li>Corporate branding</li>
-          <li>Event branding</li>
-          <li>Product packaging</li>
-        </ul>
-        <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary" aria-label="Request a quote for Branding Solutions">Request Quote</a>
-      </div>
-    </div>
+    <section class="section">
+      <div class="container">
+        <h2 class="visually-hidden">Pricing and Service Details</h2>
+        
+        <h3 class="section-title">Web Development & Automation</h3>
+        <div class="grid cols-3">
+          <div class="card price">
+            <h3>Website Starter</h3>
+            <p class="price__value">₦150,000</p>
+            <p class="muted">A professional and responsive website to establish your online presence.</p>
+            <ul>
+              <li>5-page responsive site</li>
+              <li>Basic SEO setup</li>
+              <li>Contact form integration</li>
+              <li>Domain & hosting assistance</li>
+            </ul>
+            <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Get Started</a>
+          </div>
+          <div class="card price price--featured">
+            <h3>Web App Pro</h3>
+            <p class="price__value">₦350,000+</p>
+            <p class="muted">Custom-built web applications with full backend and database support.</p>
+            <ul>
+              <li>Custom frontend + backend</li>
+              <li>Database & user authentication</li>
+              <li>API integrations</li>
+              <li>Secure deployment & maintenance</li>
+            </ul>
+            <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Request Quote</a>
+          </div>
+          <div class="card price">
+            <h3>Automation Suite</h3>
+            <p class="price__value">₦120,000+</p>
+            <p class="muted">Streamline your workflows and save time with custom automation scripts.</p>
+            <ul>
+              <li>Workflow automation</li>
+              <li>Data scraping & cleaning</li>
+              <li>Analytics dashboards</li>
+              <li>API-based task automation</li>
+            </ul>
+            <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Discuss</a>
+          </div>
+        </div>
 
-    <h2>Blockchain & Smart Contracts</h2>
-    <p>We provide a range of blockchain services, including:</p>
-    <ul>
-      <li>Token launches</li>
-      <li>Smart contract development & audits (basic)</li>
-      <li>Integrations for EVM chains</li>
-    </ul>
+        <h3 class="section-title">Graphics, Printing & Branding</h3>
+        <div class="grid cols-3">
+          <div class="card price">
+            <h3>Graphics Design</h3>
+            <p class="price__value">Custom Quote</p>
+            <p class="muted">Stunning visuals tailored to your unique brand identity.</p>
+            <ul>
+              <li>Logos & flyers</li>
+              <li>Social media kits</li>
+              <li>Business cards</li>
+              <li>Vector illustrations</li>
+            </ul>
+            <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Hire Us</a>
+          </div>
+          <div class="card price">
+            <h3>Printing Services</h3>
+            <p class="price__value">Custom Quote</p>
+            <p class="muted">High-quality printing and branded materials that make you stand out.</p>
+            <ul>
+              <li>Posters & banners</li>
+              <li>Branded merchandise</li>
+              <li>Bulk printing & finishing</li>
+              <li>Packaging solutions</li>
+            </ul>
+            <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Order Now</a>
+          </div>
+          <div class="card price">
+            <h3>Branding Solutions</h3>
+            <p class="price__value">Custom Quote</p>
+            <p class="muted">Comprehensive brand identity development from strategy to execution.</p>
+            <ul>
+              <li>Corporate branding</li>
+              <li>Brand guidelines & style guides</li>
+              <li>Product packaging</li>
+              <li>Event branding</li>
+            </ul>
+            <a href="https://wa.me/message/2WH6NHHG6JVNP1" class="btn btn--primary">Request Quote</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section--accent">
+      <div class="container cta">
+        <h2>Ready to start your project?</h2>
+        <p class="muted">We also offer custom blockchain solutions tailored to your needs. <a href="contact.html">Contact us</a> to discuss your project.</p>
+        <div class="actions">
+          <a href="portfolio.html" class="btn btn--primary">View Our Work</a>
+          <a href="contact.html" class="btn btn--ghost">Contact Us</a>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
     <div class="container footer-grid">
       <div>
         <a class="brand brand--footer" href="index.html" aria-label="GraphiTech Command home">
-          <img src="assets/logo.png" alt="GraphiTech Command logo" />
+          <img src="assets/logo.png" alt="GraphiTech Command logo" width="30" height="30" />
           <span>GraphiTech Command</span>
         </a>
         <p>© <span id="year"></span> GraphiTech Command. All rights reserved.</p>
@@ -118,22 +150,23 @@
       <div>
         <h4>Explore</h4>
         <ul>
-          <li><a href="about.html" aria-label="About us page">About</a></li>
-          <li><a href="services.html" aria-label="Our services page">Services</a></li>
-          <li><a href="contact.html" aria-label="Contact us page">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
       <div>
         <h4>Follow</h4>
         <ul>
-          <li><a href="#" aria-label="Twitter/X profile">Twitter/X</a></li>
-          <li><a href="#" aria-label="LinkedIn profile">LinkedIn</a></li>
-          <li><a href="#" aria-label="GitHub profile">GitHub</a></li>
+          <li><a href="#" target="_blank" rel="noopener noreferrer">Twitter/X</a></li>
+          <li><a href="#" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+          <li><a href="#" target="_blank" rel="noopener noreferrer">GitHub</a></li>
         </ul>
       </div>
     </div>
   </footer>
 
-  <script src="assets/script.js"></script>
+  <script src="assets/script.js" defer></script>
 </body>
 </html>
