--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
               We specialize in graphics design, printing, and branding alongside our tech services like web development, automation, and blockchain solutions. Our mission is to empower individuals, startups, and businesses with impactful designs and production-ready technologies.
             </p>
             <p class="muted">
-              Our core values guide every project: we prioritize **Creativity with purpose**, **Clarity over complexity**, **Speed with quality**, and always put **Customer success first**.
+              Our core values guide every project: we prioritize <b>Creativity with purpose, Clarity over complexity, Speed with quality, and always put Customer success first.</b>
             </p>
           </div>
           <div class="card">
