--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
           <p class="muted">
             Use the form below to send us a detailed message about your needs.
           </p>
-          <form id="contactForm" class="form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST" novalidate>
+          <form id="contactForm" class="form" action="https://formspree.io/f/mblkyqyr" method="POST" novalidate>
             <label for="name">
               Name
               <input type="text" name="name" id="name" required />
