--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
         <ul>
           <li><a href="#" target="_blank" rel="noopener noreferrer">Twitter/X</a></li>
           <li><a href="#" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-          <li><a href="#" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+          <li><a href="https://github.com/Great2008" target="_blank" rel="noopener noreferrer">GitHub</a></li>
         </ul>
       </div>
     </div>
